<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerVertical="false"
    tools:context="jonvtruong.catan_monopoly_helper.MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/wood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Wood"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numWood"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/brick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Brick"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numBrick"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sheep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sheep"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numSheep"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/wheat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Wheat"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numWheat"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ore"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numOre"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/Submit"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
</android.support.constraint.ConstraintLayout>
